--- a/client/assets/main.css
+++ b/client/assets/main.css
@@ -3,6 +3,8 @@
 :root {
   --red: rgb(208, 67, 12);
   --base-bg: #f1f3f5;
+  --primary: #1d005f;
+  font-family: "Marker Felt", sans-serif;
 }
 
 button.btn-small {
@@ -23,10 +25,41 @@ a.button {
   text-decoration: none;
 }
 
+.button {
+  background-color: var(--primary);
+  opacity: 0.5;
+}
+
+.button:hover {
+  opacity: 1;
+}
+
 .column {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1em;
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+main {
+  width: 100vw;
+  height: 80vh;
+  overflow: hidden;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
