--- a/client/assets/main.css
+++ b/client/assets/main.css
@@ -4,7 +4,19 @@
   --red: rgb(208, 67, 12);
   --base-bg: #f1f3f5;
   --primary: #1d005f;
-  font-family: "Marker Felt", sans-serif;
+  font-family: 'Montserrat', sans-serif;
+}
+
+main {
+  width: 100vw;
+  height: 80vh;
+  overflow: hidden;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid rgba(207, 207, 207, 0.83); /* Thin light gray border */
+  margin: 0.1rem 0; /* Add space around the hr */
 }
 
 button.btn-small {
@@ -16,6 +28,10 @@ button.button-error {
   background: var(--red);
 }
 
+button {
+  cursor: pointer;
+}
+
 a.button {
   color: #212529;
   background-color: #f1f3f5;
@@ -23,15 +39,6 @@ a.button {
   border-radius: 0.25em;
   padding: 0.375em 0.75em;
   text-decoration: none;
-}
-
-.button {
-  background-color: var(--primary);
-  opacity: 0.5;
-}
-
-.button:hover {
-  opacity: 1;
 }
 
 .column {
@@ -42,6 +49,13 @@ a.button {
   gap: 1em;
 }
 
+.vertical {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
 .centered {
   display: flex;
   justify-content: center;
@@ -49,10 +63,12 @@ a.button {
   text-align: center;
 }
 
-main {
-  width: 100vw;
-  height: 80vh;
-  overflow: hidden;
+.opaque {
+  opacity: 0.5;
+}
+
+.text-sm {
+  font-size: 12px;
 }
 
 @keyframes fadeIn {
