--- a/client/assets/main.css
+++ b/client/assets/main.css
@@ -3,20 +3,31 @@
 :root {
   --red: rgb(208, 67, 12);
   --base-bg: #f1f3f5;
-  --primary: #1d005f;
+  --primary: #2d1571;
+  --light-gray: #F0F2F5;
   font-family: 'Montserrat', sans-serif;
 }
 
-main {
-  width: 100vw;
-  height: 80vh;
+html,
+body,
+#app {
+  margin: 0; /* Remove default margins */
+  padding: 0;
+  height: 100%; /* Set body and html to take up % of viewport height */
   overflow: hidden;
 }
 
-hr {
-  border: none;
-  border-top: 1px solid rgba(207, 207, 207, 0.83); /* Thin light gray border */
-  margin: 0.1rem 0; /* Add space around the hr */
+main {
+  height: 90%;
+  overflow: scroll;
+}
+
+main::-webkit-scrollbar {
+  display: none;
+}
+
+section {
+  box-sizing: border-box;
 }
 
 button.btn-small {
@@ -30,6 +41,14 @@ button.button-error {
 
 button {
   cursor: pointer;
+}
+
+a {
+  cursor: pointer;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 a.button {
@@ -61,6 +80,24 @@ a.button {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.modal {
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal .content {
+  position: absolute;
+  background-color: white;
+  width: 60%;
+  height: 60%;
+  animation: fadeIn 0.3s;
+  border-radius: 1em;
 }
 
 .opaque {
